Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amore-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: amore-ingress-static-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-service
            port:
              number: 5040
  # defaultBackend:
  #   service:
  #     name: flask-service
  #     port:
  #       number: 5040
